# dwmdumper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  buildAndPack.yml
dwmdumperlib/: Cargo.toml
dwmdumperlib/src/: lib.rs
processdumper/: Cargo.toml
processdumper/src/: debug.rs  handle.rs  integrity.rs  lib.rs  privilege.rs  process.rs
src/: cli.rs  debug.rs  integrity.rs  main.rs  privilege.rs  process.rs
