[package]
name = "dwmdumper"
version = "0.5.0"
description = "A utility to take a memory dump of DWM.exe."
edition = "2021"

[dependencies]
processdumper = { path = "processdumper" }

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]
