[package]
name = "processdumper"
version = "0.8.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Wdk_System_SystemInformation",
]